# examplesOfOpenCV

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt
src/: CMakeLists.txt
src/LoG/: main.cpp
src/adThreshold/: main.cpp
src/canny/: main.cpp
src/cap/: main.cpp
src/cvt_color/: main.cpp
src/dilate/: main.cpp
src/erode/: main.cpp
src/fileter/: main.cpp
src/fileter_sharpen/: main.cpp
src/fileter_smooth/: main.cpp
src/imread/: main.cpp
src/morphology/: main.cpp
src/sharpen_bar/: main.cpp
src/smooth_bar/: main.cpp
src/sobel/: main.cpp
src/threshold/: main.cpp
